{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "LeftPlayer",
            "id": "00c25ee3-f530-42b5-b70d-aa8aab7d0195",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "dfeeb2fa-d840-4662-9507-e6bb827e9df9",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WS",
                    "id": "0e8efc97-1825-47c3-99bc-75999ff849b6",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9d4b7a5f-93a1-42b2-87bd-87ee9263ee0d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8c1b1280-096c-4079-93e8-8d65edae1fbc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "RightPlayer",
            "id": "ad6873fe-3ff0-4e4b-9fff-60ba74aa1826",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c0929200-7ba4-431b-8247-3cd873173e82",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Arrows",
                    "id": "aa82cfdb-0b0e-44a2-b874-2ad10c7c344a",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5b7d5c02-3cb2-4a75-b074-e5ff4754bbb5",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "48277379-cc41-4eaf-b5b7-923825b01b9c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}